@@ -18,7 +18,7 @@
   <description>Microservice des courses</description>
 
   <properties>
-    <java.version>21</java.version>
+    <java.version>23</java.version>
   </properties>
 
   <dependencies>
@@ -42,6 +42,15 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>23</source>
+                <target>23</target>
+                <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 
